Remove: Eliminación completa de emojis de todos los archivos
- Remover emojis de todos los archivos .md (20 archivos)
- Remover emojis de todos los archivos .ipynb (17 archivos)
- Limpiar caracteres residuales y selectores Unicode
- Corregir espaciado en encabezados después de remoción
- Mantener formato y estructura original de documentación
- Asegurar compatibilidad con sistemas que no soportan emojis

Archivos afectados:
- README.md, CLAUDE.md, RESUMEN-ESTRUCTURA-EVALUACION.md
- Todos los README.md de bloques y evaluaciones
- Notebooks de contenido y soluciones de casos prácticos
- Referencias y guías de instalación

Total: 37 archivos procesados sin emojis

--- a/contenido/bloque-2/semana-7/tipos-datos-futbol.ipynb
+++ b/contenido/bloque-2/semana-7/tipos-datos-futbol.ipynb
@@ -193,11 +193,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset de resultados creado\n",
-      "📊 Dimensiones: (400, 10)\n",
-      "📅 Rango de fechas: 2022-08-01 00:00:00 a 2023-05-25 00:00:00\n",
+      " Dataset de resultados creado\n",
+      " Dimensiones: (400, 10)\n",
+      " Rango de fechas: 2022-08-01 00:00:00 a 2023-05-25 00:00:00\n",
       "\n",
-      "🔍 Primeras 5 filas del dataset de resultados:\n",
+      " Primeras 5 filas del dataset de resultados:\n",
       "   match_id temporada     liga      fecha     equipo_local equipo_visitante  \\\n",
       "0         1   2020-21  La Liga 2023-03-03          Sevilla       Villarreal   \n",
       "1         2   2020-21  La Liga 2023-02-08  Atletico Madrid          Sevilla   \n",
@@ -278,11 +278,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset de eventos creado\n",
-      "📊 Dimensiones: (1024, 8)\n",
-      "⚽ Partidos con eventos: 100\n",
+      " Dataset de eventos creado\n",
+      " Dimensiones: (1024, 8)\n",
+      " Partidos con eventos: 100\n",
       "\n",
-      "🔍 Primeras 5 filas del dataset de eventos:\n",
+      " Primeras 5 filas del dataset de eventos:\n",
       "   event_id  match_id     liga temporada  minuto       tipo_evento  \\\n",
       "0         1       210  La Liga   2022-23      79  Tarjeta Amarilla   \n",
       "1         2       210  La Liga   2022-23      90               Gol   \n",
@@ -359,11 +359,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset de posiciones creado\n",
-      "📊 Dimensiones: (120, 12)\n",
-      "🏆 Ligas por temporada: 5\n",
+      " Dataset de posiciones creado\n",
+      " Dimensiones: (120, 12)\n",
+      " Ligas por temporada: 5\n",
       "\n",
-      "🔍 Primeras 5 filas del dataset de posiciones:\n",
+      " Primeras 5 filas del dataset de posiciones:\n",
       "  temporada     liga           equipo  posicion  partidos_jugados  victorias  \\\n",
       "0   2020-21  La Liga        Barcelona         1                38         11   \n",
       "1   2020-21  La Liga      Real Madrid         2                32         16   \n",
@@ -440,13 +440,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 ANÁLISIS DE DATOS DE RESULTADOS\n",
+      " ANÁLISIS DE DATOS DE RESULTADOS\n",
       "==================================================\n",
-      "📈 Total de partidos: 400\n",
-      "🏆 Ligas incluidas: 5\n",
-      "📅 Temporadas incluidas: 4\n",
+      " Total de partidos: 400\n",
+      " Ligas incluidas: 5\n",
+      " Temporadas incluidas: 4\n",
       "\n",
-      "🏟️ Partidos por liga:\n",
+      " Partidos por liga:\n",
       "liga\n",
       "La Liga           80\n",
       "Premier League    80\n",
@@ -455,7 +455,7 @@
       "Ligue 1           80\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "📅 Partidos por temporada:\n",
+      " Partidos por temporada:\n",
       "temporada\n",
       "2020-21    100\n",
       "2021-22    100\n",
@@ -463,12 +463,12 @@
       "2023-24    100\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "⚽ Estadísticas de goles:\n",
+      " Estadísticas de goles:\n",
       "Promedio de goles por partido: 2.51\n",
       "Partido con más goles: 8 goles\n",
       "Partidos sin goles: 30\n",
       "\n",
-      "🏆 Distribución de resultados:\n",
+      " Distribución de resultados:\n",
       "resultado\n",
       "Local        45.8\n",
       "Visitante    27.5\n",
@@ -525,13 +525,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 ANÁLISIS DE DATOS DE EVENTOS\n",
+      " ANÁLISIS DE DATOS DE EVENTOS\n",
       "==================================================\n",
-      "📈 Total de eventos: 1024\n",
-      "⚽ Partidos con eventos: 100\n",
-      "🎯 Tipos de eventos: 6\n",
+      " Total de eventos: 1024\n",
+      " Partidos con eventos: 100\n",
+      " Tipos de eventos: 6\n",
       "\n",
-      "🎯 Eventos por tipo:\n",
+      " Eventos por tipo:\n",
       "tipo_evento\n",
       "Tarjeta Amarilla    290\n",
       "Gol                 230\n",
@@ -541,7 +541,7 @@
       "Tarjeta Roja         46\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "🏟️ Eventos por liga:\n",
+      " Eventos por liga:\n",
       "liga\n",
       "Bundesliga        232\n",
       "Premier League    221\n",
@@ -555,10 +555,10 @@
       "Eventos en primera mitad (1-45 min): 490\n",
       "Eventos en segunda mitad (46-90 min): 534\n",
       "\n",
-      "📊 Promedio de eventos por partido: 10.2\n",
+      " Promedio de eventos por partido: 10.2\n",
       "Partido con más eventos: 15 eventos\n",
       "\n",
-      "📊 Promedio de eventos por partido: 10.2\n",
+      " Promedio de eventos por partido: 10.2\n",
       "Partido con más eventos: 15 eventos\n"
      ]
     }
@@ -622,25 +622,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 ANÁLISIS DE DATOS DE POSICIONES\n",
+      " ANÁLISIS DE DATOS DE POSICIONES\n",
       "==================================================\n",
-      "📈 Total de registros: 120\n",
-      "🏆 Ligas incluidas: 5\n",
-      "📅 Temporadas incluidas: 4\n",
-      "⚽ Equipos por liga: 30\n",
+      " Total de registros: 120\n",
+      " Ligas incluidas: 5\n",
+      " Temporadas incluidas: 4\n",
+      " Equipos por liga: 30\n",
       "\n",
-      "⚽ Estadísticas de rendimiento:\n",
+      " Estadísticas de rendimiento:\n",
       "Promedio de puntos por equipo: 51.2\n",
       "Equipo con más puntos: 86 puntos\n",
       "Equipo con menos puntos: 18 puntos\n",
       "\n",
-      "🥅 Estadísticas de goles:\n",
+      " Estadísticas de goles:\n",
       "Promedio de goles a favor: 49.3\n",
       "Promedio de goles en contra: 38.7\n",
       "Mejor diferencia de goles: 63\n",
       "Peor diferencia de goles: -32\n",
       "\n",
-      "🏆 Top 5 equipos por puntos (todas las temporadas):\n",
+      " Top 5 equipos por puntos (todas las temporadas):\n",
       "        equipo            liga temporada  puntos  posicion\n",
       "5   Villarreal         La Liga   2020-21      86         6\n",
       "98     Chelsea  Premier League   2023-24      85         3\n",
@@ -707,10 +707,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎨 Visualizaciones creadas con seaborn - código más limpio y elegante\n",
-      "💡 Beneficios: mejor estética, menos código, integración automática con pandas\n",
+      " Visualizaciones creadas con seaborn - código más limpio y elegante\n",
+      " Beneficios: mejor estética, menos código, integración automática con pandas\n",
       "\n",
-      "🚀 Creando visualizaciones avanzadas con seaborn...\n"
+      " Creando visualizaciones avanzadas con seaborn...\n"
      ]
     },
     {
@@ -727,9 +727,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✨ Visualizaciones avanzadas completadas con seaborn\n",
+      " Visualizaciones avanzadas completadas con seaborn\n",
       "\n",
-      "🔄 DEMOSTRACIÓN: MATPLOTLIB VS SEABORN\n",
+      " DEMOSTRACIÓN: MATPLOTLIB VS SEABORN\n",
       "==================================================\n"
      ]
     },
@@ -747,11 +747,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Comparación de líneas de código:\n",
+      " Comparación de líneas de código:\n",
       "   Matplotlib: ~8-10 líneas + configuración manual\n",
       "   Seaborn: ~3-4 líneas + estilos automáticos\n",
       "\n",
-      "💡 Seaborn es ideal para análisis exploratorio rápido y profesional\n"
+      " Seaborn es ideal para análisis exploratorio rápido y profesional\n"
      ]
     }
    ],
@@ -824,24 +824,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 SIMULACIÓN DE GUARDADO Y CARGA DE CSV\n",
+      " SIMULACIÓN DE GUARDADO Y CARGA DE CSV\n",
       "=============================================\n",
-      "📁 Simulando guardado de archivos:\n",
-      "✅ df_resultados.to_csv('datos_resultados.csv')\n",
-      "✅ df_eventos.to_csv('datos_eventos.csv')\n",
-      "✅ df_posiciones.to_csv('datos_posiciones.csv')\n",
+      " Simulando guardado de archivos:\n",
+      " df_resultados.to_csv('datos_resultados.csv')\n",
+      " df_eventos.to_csv('datos_eventos.csv')\n",
+      " df_posiciones.to_csv('datos_posiciones.csv')\n",
       "\n",
-      "📂 Simulando carga de archivos:\n",
-      "✅ df_resultados = pd.read_csv('datos_resultados.csv')\n",
-      "✅ df_eventos = pd.read_csv('datos_eventos.csv')\n",
-      "✅ df_posiciones = pd.read_csv('datos_posiciones.csv')\n",
+      " Simulando carga de archivos:\n",
+      " df_resultados = pd.read_csv('datos_resultados.csv')\n",
+      " df_eventos = pd.read_csv('datos_eventos.csv')\n",
+      " df_posiciones = pd.read_csv('datos_posiciones.csv')\n",
       "\n",
-      "📊 Información de datasets cargados:\n",
+      " Información de datasets cargados:\n",
       "Dataset de resultados: (400, 10)\n",
       "Dataset de eventos: (1024, 8)\n",
       "Dataset de posiciones: (120, 12)\n",
       "\n",
-      "🔍 Verificación de tipos de datos:\n",
+      " Verificación de tipos de datos:\n",
       "Resultados:\n",
       "match_id                     int64\n",
       "temporada                   object\n",
@@ -855,7 +855,7 @@
       "total_goles                  int64\n",
       "dtype: object\n",
       "\n",
-      "⚠️ Nota: En un entorno real, sería necesario:\n",
+      " Nota: En un entorno real, sería necesario:\n",
       "- Verificar la integridad de los datos\n",
       "- Manejar datos faltantes\n",
       "- Convertir tipos de datos si es necesario\n",
@@ -895,10 +895,10 @@
     "print()\n",
     "\n",
     "print(\"TIPOS DE DATOS MÁS COMUNES EN FÚTBOL:\")\n",
-    "print(\"✓ Resultados: Base para cualquier análisis\")\n",
-    "print(\"✓ Jugadores: Análisis individual y mercado\")  \n",
-    "print(\"✓ Equipos: Análisis táctico y rendimiento\")\n",
-    "print(\"✓ Eventos: Análisis profundo del juego\")"
+    "print(\" Resultados: Base para cualquier análisis\")\n",
+    "print(\" Jugadores: Análisis individual y mercado\")  \n",
+    "print(\" Equipos: Análisis táctico y rendimiento\")\n",
+    "print(\" Eventos: Análisis profundo del juego\")"
    ]
   },
   {
