--- a/contenido/bloque-2/semana-9/visualizacion-datos.ipynb
+++ b/contenido/bloque-2/semana-9/visualizacion-datos.ipynb
@@ -594,10 +594,10 @@
       "==============================\n",
       "FÓRMULA MÁGICA PARA GRÁFICOS:\n",
       "\n",
-      "1️⃣ Importar seaborn: import seaborn as sns\n",
-      "2️⃣ Configurar tema: sns.set_theme()\n",
-      "3️⃣ Hacer gráfico: sns.barplot(data=df, x='columna1', y='columna2')\n",
-      "4️⃣ Mostrar: plt.show()\n",
+      "1 Importar seaborn: import seaborn as sns\n",
+      "2 Configurar tema: sns.set_theme()\n",
+      "3 Hacer gráfico: sns.barplot(data=df, x='columna1', y='columna2')\n",
+      "4 Mostrar: plt.show()\n",
       "\n",
       "¡Solo 4 pasos para gráficos profesionales!\n",
       "\n",
