--- a/contenido/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
+++ b/contenido/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
@@ -1444,10 +1444,10 @@
       "\n",
       "CONCLUSIONES CLAVE:\n",
       "--------------------\n",
-      "✓ Crear variables más útiles SÍ mejora los predictores\n",
-      "✓ Optimizar configuraciones puede dar mejoras adicionales\n",
-      "✓ La combinación de ambas técnicas es poderosa\n",
-      "✓ Variables como 'goles por partido' son más informativas\n",
+      " Crear variables más útiles SÍ mejora los predictores\n",
+      " Optimizar configuraciones puede dar mejoras adicionales\n",
+      " La combinación de ambas técnicas es poderosa\n",
+      " Variables como 'goles por partido' son más informativas\n",
       "\n",
       "¿QUÉ HACER EN PROYECTOS FUTUROS?\n",
       "-----------------------------------\n",
@@ -1525,10 +1525,10 @@
     "\n",
     "print(f\"\\nCONCLUSIONES CLAVE:\")\n",
     "print(f\"-\" * 20)\n",
-    "print(f\"✓ Crear variables más útiles SÍ mejora los predictores\")\n",
-    "print(f\"✓ Optimizar configuraciones puede dar mejoras adicionales\")\n",
-    "print(f\"✓ La combinación de ambas técnicas es poderosa\")\n",
-    "print(f\"✓ Variables como 'goles por partido' son más informativas\")\n",
+    "print(f\" Crear variables más útiles SÍ mejora los predictores\")\n",
+    "print(f\" Optimizar configuraciones puede dar mejoras adicionales\")\n",
+    "print(f\" La combinación de ambas técnicas es poderosa\")\n",
+    "print(f\" Variables como 'goles por partido' son más informativas\")\n",
     "\n",
     "print(f\"\\n¿QUÉ HACER EN PROYECTOS FUTUROS?\")\n",
     "print(f\"-\" * 35)\n",
