--- a/contenido/bloque-3/semana-15/proyecto-final-integrador.ipynb
+++ b/contenido/bloque-3/semana-15/proyecto-final-integrador.ipynb
@@ -143,9 +143,9 @@
       "=============================================\n",
       "Creando jugadores...\n",
       "¡Datos creados exitosamente!\n",
-      "✓ 200 jugadores\n",
-      "✓ 5 equipos\n",
-      "✓ 4 posiciones diferentes\n",
+      " 200 jugadores\n",
+      " 5 equipos\n",
+      " 4 posiciones diferentes\n",
       "\n",
       "Primeros 5 jugadores:\n",
       "      nombre  equipo        posicion  edad  goles  asistencias  \\\n",
@@ -213,9 +213,9 @@
     "df['goles_por_partido'] = df['goles'] / df['partidos_jugados']\n",
     "\n",
     "print(\"¡Datos creados exitosamente!\")\n",
-    "print(f\"✓ {len(df)} jugadores\")\n",
-    "print(f\"✓ {len(df['equipo'].unique())} equipos\")\n",
-    "print(f\"✓ 4 posiciones diferentes\")\n",
+    "print(f\" {len(df)} jugadores\")\n",
+    "print(f\" {len(df['equipo'].unique())} equipos\")\n",
+    "print(f\" 4 posiciones diferentes\")\n",
     "\n",
     "# Mostrar los primeros 5 jugadores\n",
     "print(f\"\\nPrimeros 5 jugadores:\")\n",
@@ -306,9 +306,9 @@
       "¡Gráficos creados exitosamente!\n",
       "\n",
       "OBSERVACIONES:\n",
-      "✓ Los delanteros anotan más goles (como era de esperarse)\n",
-      "✓ La mayoría de jugadores tienen entre 20-25 años\n",
-      "✓ Todos los equipos tienen cantidad similar de jugadores\n"
+      " Los delanteros anotan más goles (como era de esperarse)\n",
+      " La mayoría de jugadores tienen entre 20-25 años\n",
+      " Todos los equipos tienen cantidad similar de jugadores\n"
      ]
     }
    ],
@@ -383,9 +383,9 @@
     "\n",
     "print(\"¡Gráficos creados exitosamente!\")\n",
     "print(\"\\nOBSERVACIONES:\")\n",
-    "print(f\"✓ Los delanteros anotan más goles (como era de esperarse)\")\n",
-    "print(f\"✓ La mayoría de jugadores tienen entre 20-25 años\")\n",
-    "print(f\"✓ Todos los equipos tienen cantidad similar de jugadores\")"
+    "print(f\" Los delanteros anotan más goles (como era de esperarse)\")\n",
+    "print(f\" La mayoría de jugadores tienen entre 20-25 años\")\n",
+    "print(f\" Todos los equipos tienen cantidad similar de jugadores\")"
    ]
   },
   {
@@ -464,8 +464,8 @@
       "\n",
       "Análisis completado!\n",
       "=========================\n",
-      "✓ 106 jugadores de alto rendimiento\n",
-      "✓ Mejor equipo: Pumas (8.9 goles promedio)\n",
+      " 106 jugadores de alto rendimiento\n",
+      " Mejor equipo: Pumas (8.9 goles promedio)\n",
       "=========================\n"
      ]
     }
@@ -536,8 +536,8 @@
     "\n",
     "print(f\"\\nAnálisis completado!\")\n",
     "print(\"=\"*25)\n",
-    "print(f\"✓ {len(df[df['rendimiento'] == 'Alto'])} jugadores de alto rendimiento\")\n",
-    "print(f\"✓ Mejor equipo: {goles_equipo.index[0]} ({goles_equipo.iloc[0]:.1f} goles promedio)\")\n",
+    "print(f\" {len(df[df['rendimiento'] == 'Alto'])} jugadores de alto rendimiento\")\n",
+    "print(f\" Mejor equipo: {goles_equipo.index[0]} ({goles_equipo.iloc[0]:.1f} goles promedio)\")\n",
     "print(\"=\"*25)"
    ]
   },
@@ -749,19 +749,19 @@
       "LO QUE APRENDIMOS:\n",
       "--------------------\n",
       "FUNDAMENTOS:\n",
-      "   ✓ Usar Python para trabajar con datos\n",
-      "   ✓ Organizar información en tablas\n",
-      "   ✓ Hacer cálculos básicos (promedios, máximos, mínimos)\n",
+      "    Usar Python para trabajar con datos\n",
+      "    Organizar información en tablas\n",
+      "    Hacer cálculos básicos (promedios, máximos, mínimos)\n",
       "\n",
       "VISUALIZACIÓN:\n",
-      "   ✓ Crear gráficos de barras, histogramas y dispersión\n",
-      "   ✓ Comparar grupos de datos visualmente\n",
-      "   ✓ Hacer que los datos sean fáciles de entender\n",
+      "    Crear gráficos de barras, histogramas y dispersión\n",
+      "    Comparar grupos de datos visualmente\n",
+      "    Hacer que los datos sean fáciles de entender\n",
       "\n",
       "ANÁLISIS:\n",
-      "   ✓ Hacer preguntas importantes sobre los datos\n",
-      "   ✓ Encontrar patrones y tendencias\n",
-      "   ✓ Sacar conclusiones útiles\n",
+      "    Hacer preguntas importantes sobre los datos\n",
+      "    Encontrar patrones y tendencias\n",
+      "    Sacar conclusiones útiles\n",
       "\n",
       "ESTADÍSTICAS DE NUESTRO PROYECTO:\n",
       "-----------------------------------\n",
@@ -823,19 +823,19 @@
     "print(\"-\" * 20)\n",
     "\n",
     "print(\"FUNDAMENTOS:\")\n",
-    "print(\"   ✓ Usar Python para trabajar con datos\")\n",
-    "print(\"   ✓ Organizar información en tablas\")\n",
-    "print(\"   ✓ Hacer cálculos básicos (promedios, máximos, mínimos)\")\n",
+    "print(\"    Usar Python para trabajar con datos\")\n",
+    "print(\"    Organizar información en tablas\")\n",
+    "print(\"    Hacer cálculos básicos (promedios, máximos, mínimos)\")\n",
     "\n",
     "print(\"\\nVISUALIZACIÓN:\")\n",
-    "print(\"   ✓ Crear gráficos de barras, histogramas y dispersión\")\n",
-    "print(\"   ✓ Comparar grupos de datos visualmente\")\n",
-    "print(\"   ✓ Hacer que los datos sean fáciles de entender\")\n",
+    "print(\"    Crear gráficos de barras, histogramas y dispersión\")\n",
+    "print(\"    Comparar grupos de datos visualmente\")\n",
+    "print(\"    Hacer que los datos sean fáciles de entender\")\n",
     "\n",
     "print(\"\\nANÁLISIS:\")\n",
-    "print(\"   ✓ Hacer preguntas importantes sobre los datos\")\n",
-    "print(\"   ✓ Encontrar patrones y tendencias\")\n",
-    "print(\"   ✓ Sacar conclusiones útiles\")\n",
+    "print(\"    Hacer preguntas importantes sobre los datos\")\n",
+    "print(\"    Encontrar patrones y tendencias\")\n",
+    "print(\"    Sacar conclusiones útiles\")\n",
     "\n",
     "# === ESTADÍSTICAS DEL PROYECTO ===\n",
     "print(f\"\\nESTADÍSTICAS DE NUESTRO PROYECTO:\")\n",
