--- a/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
+++ b/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
@@ -51,18 +51,18 @@
     "    import seaborn as sns\n",
     "    sns.set_theme(style=\"whitegrid\", palette=\"Set2\")\n",
     "    SEABORN_AVAILABLE = True\n",
-    "    print(\"✅ Seaborn disponible - gráficos avanzados habilitados\")\n",
+    "    print(\" Seaborn disponible - gráficos avanzados habilitados\")\n",
     "except ImportError:\n",
     "    SEABORN_AVAILABLE = False\n",
-    "    print(\"⚠️  Seaborn no disponible - usando matplotlib básico\")\n",
+    "    print(\"  Seaborn no disponible - usando matplotlib básico\")\n",
     "\n",
     "try:\n",
     "    from sklearn.linear_model import LinearRegression\n",
     "    SKLEARN_AVAILABLE = True\n",
-    "    print(\"✅ Scikit-learn disponible - modelos predictivos habilitados\")\n",
+    "    print(\" Scikit-learn disponible - modelos predictivos habilitados\")\n",
     "except ImportError:\n",
     "    SKLEARN_AVAILABLE = False\n",
-    "    print(\"⚠️  Scikit-learn no disponible - usando análisis estadístico básico\")\n",
+    "    print(\"  Scikit-learn no disponible - usando análisis estadístico básico\")\n",
     "\n",
     "print(\"¡Herramientas de análisis avanzado listas!\")\n",
     "print(f\"Pandas: {pd.__version__} | NumPy: {np.__version__}\")\n",
@@ -79,21 +79,21 @@
    "outputs": [],
    "source": [
     "# Cargar los datasets del sistema de scouting\n",
-    "print(\"📊 Cargando datasets del sistema de scouting...\")\n",
+    "print(\" Cargando datasets del sistema de scouting...\")\n",
     "\n",
     "# Dataset principal de jugadores\n",
     "df_jugadores = pd.read_csv('../datasets/jugadores_liga_juvenil.csv')\n",
-    "print(f\"✅ Jugadores cargados: {len(df_jugadores)} registros\")\n",
+    "print(f\" Jugadores cargados: {len(df_jugadores)} registros\")\n",
     "\n",
     "# Dataset de detalles de partidos\n",
     "df_partidos = pd.read_csv('../datasets/partidos_detalle.csv')\n",
-    "print(f\"✅ Partidos cargados: {len(df_partidos)} registros\")\n",
+    "print(f\" Partidos cargados: {len(df_partidos)} registros\")\n",
     "\n",
     "# Dataset de eventos durante los partidos\n",
     "df_eventos = pd.read_csv('../datasets/eventos_partidos.csv')\n",
-    "print(f\"✅ Eventos cargados: {len(df_eventos)} registros\")\n",
+    "print(f\" Eventos cargados: {len(df_eventos)} registros\")\n",
     "\n",
-    "print(f\"\\n🎯 Sistema de scouting inicializado correctamente\")\n",
+    "print(f\"\\n Sistema de scouting inicializado correctamente\")\n",
     "print(f\"Total de datos disponibles: {len(df_jugadores)} jugadores, {len(df_partidos)} partidos, {len(df_eventos)} eventos\")"
    ]
   },
@@ -118,24 +118,24 @@
     "    Proporciona un resumen completo de la estructura y calidad de los datos\n",
     "    \"\"\"\n",
     "    print(f\"\\n=== ANÁLISIS DE {nombre_dataset.upper()} ===\")\n",
-    "    print(f\"📏 Dimensiones: {df.shape[0]} filas × {df.shape[1]} columnas\")\n",
-    "    print(f\"📋 Columnas: {list(df.columns)}\")\n",
+    "    print(f\" Dimensiones: {df.shape[0]} filas × {df.shape[1]} columnas\")\n",
+    "    print(f\" Columnas: {list(df.columns)}\")\n",
     "    \n",
-    "    print(f\"\\n🔍 Valores faltantes por columna:\")\n",
+    "    print(f\"\\n Valores faltantes por columna:\")\n",
     "    valores_faltantes = df.isnull().sum()\n",
     "    if valores_faltantes.sum() == 0:\n",
-    "        print(\"   ✅ ¡Excelente! No hay valores faltantes\")\n",
+    "        print(\"    ¡Excelente! No hay valores faltantes\")\n",
     "    else:\n",
     "        for col, missing in valores_faltantes[valores_faltantes > 0].items():\n",
     "            porcentaje = (missing / len(df)) * 100\n",
-    "            print(f\"   ⚠️  {col}: {missing} ({porcentaje:.1f}%)\")\n",
+    "            print(f\"     {col}: {missing} ({porcentaje:.1f}%)\")\n",
     "    \n",
-    "    print(f\"\\n📊 Estadísticas descriptivas de variables numéricas:\")\n",
+    "    print(f\"\\n Estadísticas descriptivas de variables numéricas:\")\n",
     "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
     "    if len(numeric_cols) > 0:\n",
     "        print(df[numeric_cols].describe().round(2))\n",
     "    \n",
-    "    print(f\"\\n🏷️ Variables categóricas y sus valores únicos:\")\n",
+    "    print(f\"\\n Variables categóricas y sus valores únicos:\")\n",
     "    categorical_cols = df.select_dtypes(include=['object']).columns\n",
     "    for col in categorical_cols:\n",
     "        unique_values = df[col].nunique()\n",
@@ -177,27 +177,27 @@
    "outputs": [],
    "source": [
     "# Análisis específico de distribuciones clave para scouting\n",
-    "print(\"🎯 ANÁLISIS ESPECÍFICO PARA SCOUTING\")\n",
+    "print(\" ANÁLISIS ESPECÍFICO PARA SCOUTING\")\n",
     "print(\"=\" * 50)\n",
     "\n",
     "# Distribución de edades por posición\n",
-    "print(\"\\n👥 DISTRIBUCIÓN DE EDADES POR POSICIÓN:\")\n",
+    "print(\"\\n DISTRIBUCIÓN DE EDADES POR POSICIÓN:\")\n",
     "edad_por_posicion = df_jugadores.groupby('posicion')['edad'].agg(['mean', 'min', 'max', 'std']).round(1)\n",
     "print(edad_por_posicion)\n",
     "\n",
     "# Distribución de goles por competición\n",
-    "print(\"\\n⚽ DISTRIBUCIÓN DE GOLES POR COMPETICIÓN:\")\n",
+    "print(\"\\n DISTRIBUCIÓN DE GOLES POR COMPETICIÓN:\")\n",
     "goles_por_competicion = df_jugadores.groupby('torneo')['goles'].agg(['mean', 'sum', 'max']).round(1)\n",
     "print(goles_por_competicion)\n",
     "\n",
     "# Análisis de valores de mercado\n",
-    "print(\"\\n💰 ANÁLISIS DE VALORES DE MERCADO:\")\n",
+    "print(\"\\n ANÁLISIS DE VALORES DE MERCADO:\")\n",
     "print(f\"Valor promedio: ${df_jugadores['valor_mercado_estimado'].mean():,.0f}\")\n",
     "print(f\"Valor mediano: ${df_jugadores['valor_mercado_estimado'].median():,.0f}\")\n",
     "print(f\"Rango: ${df_jugadores['valor_mercado_estimado'].min():,.0f} - ${df_jugadores['valor_mercado_estimado'].max():,.0f}\")\n",
     "\n",
     "# Identificar valores atípicos en rendimiento\n",
-    "print(\"\\n🎯 ANÁLISIS DE VALORES ATÍPICOS:\")\n",
+    "print(\"\\n ANÁLISIS DE VALORES ATÍPICOS:\")\n",
     "q1_goles = df_jugadores['goles'].quantile(0.25)\n",
     "q3_goles = df_jugadores['goles'].quantile(0.75)\n",
     "iqr_goles = q3_goles - q1_goles\n",
@@ -227,20 +227,20 @@
    "outputs": [],
    "source": [
     "# Limpieza y preparación de datos para análisis de scouting\n",
-    "print(\"🧹 PROCESO DE LIMPIEZA DE DATOS\")\n",
+    "print(\" PROCESO DE LIMPIEZA DE DATOS\")\n",
     "print(\"=\" * 40)\n",
     "\n",
     "# 1. Verificar y limpiar valores faltantes\n",
-    "print(\"\\n1️⃣ Verificando valores faltantes...\")\n",
+    "print(\"\\n1 Verificando valores faltantes...\")\n",
     "total_faltantes = df_jugadores.isnull().sum().sum()\n",
     "if total_faltantes == 0:\n",
-    "    print(\"   ✅ No se encontraron valores faltantes\")\n",
+    "    print(\"    No se encontraron valores faltantes\")\n",
     "else:\n",
-    "    print(f\"   ⚠️  Se encontraron {total_faltantes} valores faltantes\")\n",
+    "    print(f\"     Se encontraron {total_faltantes} valores faltantes\")\n",
     "    # Aquí se implementaría la lógica de manejo según el tipo de columna\n",
     "\n",
     "# 2. Normalizar nombres de equipos y posiciones\n",
-    "print(\"\\n2️⃣ Normalizando categorías...\")\n",
+    "print(\"\\n2 Normalizando categorías...\")\n",
     "# Verificar consistencia en nombres de posiciones\n",
     "posiciones_unicas = df_jugadores['posicion'].unique()\n",
     "print(f\"   Posiciones encontradas: {list(posiciones_unicas)}\")\n",
@@ -250,7 +250,7 @@
     "print(f\"   Torneos encontrados: {list(torneos_unicos)}\")\n",
     "\n",
     "# 3. Crear variables derivadas para análisis de scouting\n",
-    "print(\"\\n3️⃣ Creando variables derivadas para scouting...\")\n",
+    "print(\"\\n3 Creando variables derivadas para scouting...\")\n",
     "\n",
     "# Variables de eficiencia\n",
     "df_jugadores['goles_por_partido'] = df_jugadores['goles'] / df_jugadores['partidos_jugados']\n",
@@ -284,11 +284,11 @@
     ")\n",
     "df_jugadores['indice_disciplina'] = df_jugadores['indice_disciplina'].clip(0, 100)\n",
     "\n",
-    "print(f\"   ✅ Variables creadas: goles_por_partido, asistencias_por_partido, eficiencia_tiros\")\n",
-    "print(f\"   ✅ Variables creadas: contribucion_ofensiva, categoria_edad, indice_disciplina\")\n",
+    "print(f\"    Variables creadas: goles_por_partido, asistencias_por_partido, eficiencia_tiros\")\n",
+    "print(f\"    Variables creadas: contribucion_ofensiva, categoria_edad, indice_disciplina\")\n",
     "\n",
     "# 4. Validar rangos lógicos\n",
-    "print(\"\\n4️⃣ Validando rangos lógicos...\")\n",
+    "print(\"\\n4 Validando rangos lógicos...\")\n",
     "\n",
     "# Verificar rangos de edad\n",
     "edades_invalidas = df_jugadores[(df_jugadores['edad'] < 15) | (df_jugadores['edad'] > 20)]\n",
@@ -302,8 +302,8 @@
     "precision_invalida = df_jugadores[(df_jugadores['precision_pases'] < 0) | (df_jugadores['precision_pases'] > 100)]\n",
     "print(f\"   Precisión de pases fuera de rango (0-100%): {len(precision_invalida)} casos\")\n",
     "\n",
-    "print(f\"\\n✅ Proceso de limpieza completado\")\n",
-    "print(f\"📊 Dataset final: {df_jugadores.shape[0]} jugadores con {df_jugadores.shape[1]} variables\")"
+    "print(f\"\\n Proceso de limpieza completado\")\n",
+    "print(f\" Dataset final: {df_jugadores.shape[0]} jugadores con {df_jugadores.shape[1]} variables\")"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "    Análisis comparativo de rendimiento por posición\n",
     "    Esencial para entender los perfiles de cada posición en scouting\n",
     "    \"\"\"\n",
-    "    print(\"⚽ ANÁLISIS COMPARATIVO POR POSICIÓN\")\n",
+    "    print(\" ANÁLISIS COMPARATIVO POR POSICIÓN\")\n",
     "    print(\"=\" * 45)\n",
     "    \n",
     "    # Estadísticas agregadas por posición\n",
@@ -347,11 +347,11 @@
     "    # Aplanar el índice de columnas para mejor visualización\n",
     "    stats_posicion.columns = ['_'.join(col).strip() for col in stats_posicion.columns.values]\n",
     "    \n",
-    "    print(\"\\n📊 Estadísticas Completas por Posición:\")\n",
+    "    print(\"\\n Estadísticas Completas por Posición:\")\n",
     "    print(stats_posicion)\n",
     "    \n",
     "    # Análisis específico por posición\n",
-    "    print(\"\\n🎯 INSIGHTS POR POSICIÓN:\")\n",
+    "    print(\"\\n INSIGHTS POR POSICIÓN:\")\n",
     "    for posicion in df['posicion'].unique():\n",
     "        datos_pos = df[df['posicion'] == posicion]\n",
     "        print(f\"\\n{posicion}s ({len(datos_pos)} jugadores):\")\n",
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "# Dashboard principal de análisis de scouting\n",
-    "print(\"📊 CREANDO DASHBOARD DE ANÁLISIS DE SCOUTING\")\n",
+    "print(\" CREANDO DASHBOARD DE ANÁLISIS DE SCOUTING\")\n",
     "print(\"=\" * 50)\n",
     "\n",
     "# Configurar el dashboard principal\n",
@@ -494,8 +494,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\n✅ Dashboard principal generado\")\n",
-    "print(\"📈 Muestra distribuciones, correlaciones y rankings clave para scouting\")"
+    "print(\"\\n Dashboard principal generado\")\n",
+    "print(\" Muestra distribuciones, correlaciones y rankings clave para scouting\")"
    ]
   },
   {
@@ -517,10 +517,10 @@
    "outputs": [],
    "source": [
     "# Análisis integral para responder preguntas clave de scouting\n",
-    "print(\"🎯 ANÁLISIS INTEGRAL DE SCOUTING\")\n",
+    "print(\" ANÁLISIS INTEGRAL DE SCOUTING\")\n",
     "print(\"=\" * 45)\n",
     "\n",
-    "print(\"\\n❓ PREGUNTA 1: ¿Qué perfil de jugador ofrece mejor relación calidad-precio?\")\n",
+    "print(\"\\n PREGUNTA 1: ¿Qué perfil de jugador ofrece mejor relación calidad-precio?\")\n",
     "print(\"-\" * 70)\n",
     "\n",
     "# Crear perfiles de jugadores simplificados\n",
@@ -559,12 +559,12 @@
     "print(calidad_precio)\n",
     "\n",
     "mejor_perfil = calidad_precio.index[0]\n",
-    "print(f\"\\n✅ RESPUESTA: El perfil '{mejor_perfil}' ofrece la mejor relación calidad-precio\")\n",
+    "print(f\"\\n RESPUESTA: El perfil '{mejor_perfil}' ofrece la mejor relación calidad-precio\")\n",
     "print(f\"   Índice de valor: {calidad_precio.iloc[0]['Índice_Valor']:.3f}\")\n",
     "print(f\"   Contribución promedio: {calidad_precio.iloc[0]['Contribución_Prom']:.1f}\")\n",
     "print(f\"   Valor promedio: ${calidad_precio.iloc[0]['Valor_Promedio']:,.0f}\")\n",
     "\n",
-    "print(\"\\n❓ PREGUNTA 2: ¿En qué posiciones hay más talento disponible?\")\n",
+    "print(\"\\n PREGUNTA 2: ¿En qué posiciones hay más talento disponible?\")\n",
     "print(\"-\" * 60)\n",
     "\n",
     "# Jugadores de alto rendimiento por posición (top 25%)\n",
@@ -583,7 +583,7 @@
     "    print(f\"  • Talentos destacados: {talentos} ({porcentaje_talento:.1f}%)\")\n",
     "\n",
     "posicion_mas_talento = talentos_por_posicion.index[0]\n",
-    "print(f\"\\n✅ RESPUESTA: '{posicion_mas_talento}' tiene más talento disponible ({talentos_por_posicion.iloc[0]} talentos destacados)\")"
+    "print(f\"\\n RESPUESTA: '{posicion_mas_talento}' tiene más talento disponible ({talentos_por_posicion.iloc[0]} talentos destacados)\")"
    ]
   },
   {
@@ -602,10 +602,10 @@
    "outputs": [],
    "source": [
     "# Recomendaciones estratégicas basadas en el análisis completo\n",
-    "print(\"📋 RECOMENDACIONES ESTRATÉGICAS PARA SCOUTING\")\n",
+    "print(\" RECOMENDACIONES ESTRATÉGICAS PARA SCOUTING\")\n",
     "print(\"=\" * 55)\n",
     "\n",
-    "print(\"\\n🎯 1. LISTA DE 5 JUGADORES PRIORITARIOS PARA SCOUTING\")\n",
+    "print(\"\\n 1. LISTA DE 5 JUGADORES PRIORITARIOS PARA SCOUTING\")\n",
     "print(\"-\" * 55)\n",
     "\n",
     "# Seleccionar jugadores prioritarios basado en múltiples criterios\n",
@@ -624,14 +624,14 @@
     "else:\n",
     "    jugadores_prioritarios = oportunidades.head(5)\n",
     "\n",
-    "print(\"🌟 JUGADORES PRIORITARIOS RECOMENDADOS:\")\n",
+    "print(\" JUGADORES PRIORITARIOS RECOMENDADOS:\")\n",
     "for i, (idx, jugador) in enumerate(jugadores_prioritarios.iterrows(), 1):\n",
     "    print(f\"\\n{i}. {jugador['nombre']} ({jugador['edad']} años, {jugador['posicion']})\")\n",
-    "    print(f\"   📍 Equipo: {jugador['equipo']} | Torneo: {jugador['torneo']}\")\n",
-    "    print(f\"   ⚽ Contribución: {jugador['contribucion_ofensiva']:.1f} | Valor: ${jugador['valor_mercado_estimado']:,.0f}\")\n",
-    "    print(f\"   📊 Stats: {jugador['goles']} goles, {jugador['asistencias']} asistencias en {jugador['partidos_jugados']} partidos\")\n",
+    "    print(f\"    Equipo: {jugador['equipo']} | Torneo: {jugador['torneo']}\")\n",
+    "    print(f\"    Contribución: {jugador['contribucion_ofensiva']:.1f} | Valor: ${jugador['valor_mercado_estimado']:,.0f}\")\n",
+    "    print(f\"    Stats: {jugador['goles']} goles, {jugador['asistencias']} asistencias en {jugador['partidos_jugados']} partidos\")\n",
     "\n",
-    "print(\"\\n\\n📊 2. BENCHMARKS DE RENDIMIENTO PARA EVALUACIÓN\")\n",
+    "print(\"\\n\\n 2. BENCHMARKS DE RENDIMIENTO PARA EVALUACIÓN\")\n",
     "print(\"-\" * 52)\n",
     "\n",
     "# Calcular benchmarks por posición\n",
@@ -645,7 +645,7 @@
     "    print(f\"  • Valor promedio: ${datos_pos['valor_mercado_estimado'].mean():,.0f}\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 55)\n",
-    "print(\"📈 RESUMEN EJECUTIVO DE RECOMENDACIONES:\")\n",
+    "print(\" RESUMEN EJECUTIVO DE RECOMENDACIONES:\")\n",
     "print(\"=\" * 55)\n",
     "print(f\"• 5 jugadores identificados como prioritarios\")\n",
     "print(f\"• Enfoque en {posicion_mas_talento} (mayor disponibilidad de talento)\")\n",
@@ -665,38 +665,38 @@
     "\n",
     "¡Felicitaciones! En este caso práctico hemos aplicado exitosamente todas las técnicas avanzadas de análisis de datos del Bloque 2:\n",
     "\n",
-    "### ✅ **Exploración Avanzada de Datos:**\n",
+    "###  **Exploración Avanzada de Datos:**\n",
     "- Implementamos análisis exploratorio sistemático con funciones personalizadas\n",
     "- Identificamos y manejamos la calidad de los datos\n",
     "- Creamos variables derivadas específicas para el dominio deportivo\n",
     "- Aplicamos técnicas de validación y limpieza de datos\n",
     "\n",
-    "### ✅ **Análisis Estadístico Descriptivo:**\n",
+    "###  **Análisis Estadístico Descriptivo:**\n",
     "- Realizamos análisis comparativo por categorías (posición, torneo, edad)\n",
     "- Calculamos correlaciones para identificar factores predictivos\n",
     "- Implementamos clustering básico para perfiles de jugadores\n",
     "- Desarrollamos métricas compuestas (contribución ofensiva, índice de disciplina)\n",
     "\n",
-    "### ✅ **Visualización Profesional:**\n",
+    "###  **Visualización Profesional:**\n",
     "- Creamos dashboards informativos con seaborn y matplotlib\n",
     "- Implementamos mapas de calor tácticos para análisis espacial\n",
     "- Desarrollamos componentes interactivos con widgets\n",
     "- Aplicamos principios de diseño para comunicación efectiva\n",
     "\n",
-    "### ✅ **Aplicación de Scouting:**\n",
+    "###  **Aplicación de Scouting:**\n",
     "- Identificamos jugadores subestimados y talentos emergentes\n",
     "- Desarrollamos estrategias de reclutamiento basadas en datos\n",
     "- Establecimos benchmarks de rendimiento por posición\n",
     "- Creamos sistemas de alerta temprana para gestión de riesgos\n",
     "\n",
-    "## 🚀 Próximos Pasos\n",
+    "##  Próximos Pasos\n",
     "\n",
     "Con estas habilidades avanzadas de análisis de datos ya estás preparado para:\n",
     "- **Bloque 3:** Modelos predictivos y machine learning aplicado al fútbol\n",
     "- **Proyectos profesionales:** Análisis de scouting en organizaciones deportivas reales\n",
     "- **Especialización:** Desarrollo de herramientas de análisis táctico y rendimiento\n",
     "\n",
-    "## 📊 Valor Profesional\n",
+    "##  Valor Profesional\n",
     "\n",
     "Este proyecto demuestra competencias directamente aplicables en:\n",
     "- **Análisis deportivo profesional**\n",
@@ -704,7 +704,7 @@
     "- **Visualización de información compleja**\n",
     "- **Toma de decisiones basada en datos**\n",
     "\n",
-    "¡Excelente trabajo aplicando técnicas avanzadas de análisis de datos al scouting deportivo! 🎉⚽📈"
+    "¡Excelente trabajo aplicando técnicas avanzadas de análisis de datos al scouting deportivo! "
    ]
   }
  ],
